...
                android:text="@string/score"
                android:textColor="@color/black_title"
                android:textSize="@dimen/text_size_item_meeting"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_meeting_room"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_item_meeting"
                android:text="@string/item_room"
                android:textColor="@color/black_title"
                android:textSize="@dimen/text_size_item_meeting"
                android:textStyle="bold" />
...
            android:text="@string/mails_participants"
            android:textColor="@color/grey_title"
            android:textSize="@dimen/text_size_item_meeting" />
    </LinearLayout>

    <TextView
        android:id="@+id/item_date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/date"
        app:layout_constraintEnd_toStartOf="@id/deleteBtn"
        app:layout_constraintStart_toEndOf="@id/item_meeting"
        app:layout_constraintTop_toTopOf="@id/item_meeting" />
...
